Fix play button border on mobile

--- a/src/components/SearchTrackListContainer/SearchTrackListContainer.css
+++ b/src/components/SearchTrackListContainer/SearchTrackListContainer.css
@@ -88,6 +88,15 @@
     .md-icon:hover {
         color: #5a0a6f
     }
+    .btn:hover::before {
+        transform: rotate(180deg) scale(1.2, 1.2);
+        background-color: rgba(255, 255, 255, 0);
+    }
+    
+    .btn:hover::after {
+        background-color: rgba(255, 255, 255, 0);
+        transform: rotate(180deg) scale(1.2, 1.2);
+    }
     .card {
         width: 400px;
     }
